--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/gray"
+    android:foregroundTint="#C63434"
     android:textAlignment="textEnd"
     tools:context="com.example.calculator.MainActivity">
 
@@ -14,10 +15,12 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_margin="3dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="5dp"
+        android:gravity="center"
         android:weightSum="4"
         app:layout_constraintBottom_toTopOf="@+id/tableLayout"
-        tools:layout_editor_absoluteX="3dp">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
 
         <TextView
@@ -27,10 +30,10 @@
             android:layout_weight="1"
             android:background="@drawable/numbers"
             android:gravity="center"
-            android:text="CE"
             android:onClick="clearClick"
+            android:text="CE"
             android:textColor="#772F2F"
-            android:textSize="30sp" />
+            android:textSize="28sp" />
 
         <TextView
             android:layout_width="match_parent"
@@ -40,9 +43,9 @@
             android:background="@drawable/numbers"
             android:gravity="center"
             android:onClick="operationClick"
-            android:text="x^y"
+            android:text="xʸ"
             android:textColor="@color/pinkiko"
-            android:textSize="30sp" />
+            android:textSize="27sp" />
 
         <TextView
             android:layout_width="match_parent"
@@ -74,58 +77,62 @@
         android:id="@+id/tableLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="100dp"
+            android:gravity="center"
             android:weightSum="4">
+
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="100dp"
+                android:layout_margin="1dp"
                 android:layout_weight="1"
                 android:background="@drawable/numbers"
                 android:gravity="center"
                 android:onClick="numberClick"
                 android:text="7"
-                android:layout_margin="1dp"
                 android:textColor="@color/white"
                 android:textSize="30sp" />
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="100dp"
+                android:layout_margin="1dp"
                 android:layout_weight="1"
+                android:background="@drawable/numbers"
                 android:gravity="center"
+                android:onClick="numberClick"
                 android:text="8"
-                android:onClick="numberClick"
-                android:layout_margin="1dp"
-                android:background="@drawable/numbers"
                 android:textColor="@color/white"
                 android:textSize="30sp" />
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="100dp"
+                android:layout_margin="1dp"
                 android:layout_weight="1"
+                android:background="@drawable/numbers"
                 android:gravity="center"
+                android:onClick="numberClick"
                 android:text="9"
-                android:onClick="numberClick"
-                android:layout_margin="1dp"
-                android:background="@drawable/numbers"
                 android:textColor="@color/white"
                 android:textSize="30sp" />
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="100dp"
+                android:layout_margin="3dp"
                 android:layout_weight="1"
+                android:background="@drawable/numbers"
                 android:gravity="center"
+                android:onClick="operationClick"
                 android:text="*"
-                android:onClick="operationClick"
-                android:layout_margin="3dp"
-                android:background="@drawable/numbers"
                 android:textColor="@color/pinkiko"
                 android:textSize="30sp" />
 
@@ -135,53 +142,54 @@
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="100dp"
+            android:gravity="center"
             android:weightSum="4">
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="100dp"
+                android:layout_margin="1dp"
                 android:layout_weight="1"
+                android:background="@drawable/numbers"
                 android:gravity="center"
+                android:onClick="numberClick"
                 android:text="6"
-                android:onClick="numberClick"
-                android:layout_margin="3dp"
-                android:background="@drawable/numbers"
                 android:textColor="@color/white"
                 android:textSize="30sp" />
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="100dp"
+                android:layout_margin="3dp"
                 android:layout_weight="1"
+                android:background="@drawable/numbers"
                 android:gravity="center"
+                android:onClick="numberClick"
                 android:text="5"
-                android:onClick="numberClick"
-                android:layout_margin="3dp"
-                android:background="@drawable/numbers"
                 android:textColor="@color/white"
                 android:textSize="30sp" />
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="100dp"
+                android:layout_margin="1dp"
                 android:layout_weight="1"
+                android:background="@drawable/numbers"
                 android:gravity="center"
+                android:onClick="numberClick"
                 android:text="4"
-                android:onClick="numberClick"
-                android:layout_margin="3dp"
-                android:background="@drawable/numbers"
                 android:textColor="@color/white"
                 android:textSize="30sp" />
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="100dp"
+                android:layout_margin="3dp"
                 android:layout_weight="1"
+                android:background="@drawable/numbers"
                 android:gravity="center"
+                android:onClick="operationClick"
                 android:text="+"
-                android:onClick="operationClick"
-                android:layout_margin="3dp"
-                android:background="@drawable/numbers"
                 android:textColor="@color/pinkiko"
                 android:textSize="30sp" />
 
@@ -191,53 +199,54 @@
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="100dp"
+            android:gravity="center"
             android:weightSum="4">
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="100dp"
+                android:layout_margin="1dp"
                 android:layout_weight="1"
+                android:background="@drawable/numbers"
                 android:gravity="center"
+                android:onClick="numberClick"
                 android:text="3"
-                android:onClick="numberClick"
-                android:layout_margin="1dp"
-                android:background="@drawable/numbers"
                 android:textColor="@color/white"
                 android:textSize="30sp" />
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="100dp"
+                android:layout_margin="1dp"
                 android:layout_weight="1"
+                android:background="@drawable/numbers"
                 android:gravity="center"
+                android:onClick="numberClick"
                 android:text="2"
-                android:onClick="numberClick"
-                android:layout_margin="1dp"
-                android:background="@drawable/numbers"
                 android:textColor="@color/white"
                 android:textSize="30sp" />
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="100dp"
+                android:layout_margin="1dp"
                 android:layout_weight="1"
+                android:background="@drawable/numbers"
                 android:gravity="center"
+                android:onClick="numberClick"
                 android:text="1"
-                android:onClick="numberClick"
-                android:layout_margin="1dp"
-                android:background="@drawable/numbers"
                 android:textColor="@color/white"
                 android:textSize="30sp" />
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="100dp"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="-"
-                android:onClick="operationClick"
                 android:layout_margin="1dp"
+                android:layout_weight="1"
                 android:background="@drawable/numbers"
+                android:gravity="center"
+                android:onClick="operationClick"
+                android:text="-"
                 android:textColor="@color/pinkiko"
                 android:textSize="30sp" />
 
@@ -247,53 +256,54 @@
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="100dp"
+            android:gravity="center"
             android:weightSum="4">
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="100dp"
+                android:layout_margin="1dp"
                 android:layout_weight="1"
+                android:background="@drawable/numbers"
                 android:gravity="center"
+                android:onClick="numberClick"
                 android:text="."
-                android:onClick="numberClick"
-                android:layout_margin="1dp"
-                android:background="@drawable/numbers"
                 android:textColor="@color/white"
                 android:textSize="30sp" />
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="100dp"
+                android:layout_margin="1dp"
                 android:layout_weight="1"
+                android:background="@drawable/numbers"
                 android:gravity="center"
+                android:onClick="numberClick"
                 android:text="0"
-                android:onClick="numberClick"
-                android:layout_margin="1dp"
-                android:background="@drawable/numbers"
                 android:textColor="@color/white"
                 android:textSize="30sp" />
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="100dp"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="DEL"
                 android:layout_margin="1dp"
-                android:onClick="deleteClick"
+                android:layout_weight="1"
                 android:background="@drawable/numbers"
+                android:gravity="center"
+                android:onClick="deleteClick"
+                android:text="⌫"
                 android:textColor="@color/white"
-                android:textSize="30sp" />
+                android:textSize="27sp" />
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
+                android:layout_margin="1dp"
                 android:layout_weight="1"
                 android:background="@drawable/icon"
                 android:gravity="center"
                 android:onClick="equalsClick"
                 android:text="="
-                android:layout_margin="1dp"
                 android:textColor="@color/white"
                 android:textSize="30sp" />
 
